// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VurderingArtikkel13_2b > snapshot test dersom Norge er valgt 1`] = `

<div>
  <div class="vurderingArtikkel13_2b">
    <h1 class="typo-innholdstittel stegvelgertittel">
      Vurdering av artikkel 13 nr. 2 bokstav b
    </h1>
    <fieldset class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium">
      <legend class="navds-fieldset__legend navds-label">
        I hvilket land har virksomheten sitt interessesenter?
      </legend>
      <div class="navds-radio-buttons">
        <div class="navds-radio navds-radio--medium">
          <input
            id="333"
            name="333"
            type="radio"
            aria-labelledby="333"
            class="navds-radio__input"
            value="NORGE"
          >
          <label
            for="333"
            class="navds-radio__label"
          >
            <span class="navds-radio__content">
              <span
                id="333"
                aria-hidden="true"
                class="navds-body-short navds-body-short--medium"
              >
                Norge
              </span>
            </span>
          </label>
        </div>
        <div class="navds-radio navds-radio--medium">
          <input
            id="333"
            name="333"
            type="radio"
            aria-labelledby="333"
            class="navds-radio__input"
            value="ANNET"
          >
          <label
            for="333"
            class="navds-radio__label"
          >
            <span class="navds-radio__content">
              <span
                id="333"
                aria-hidden="true"
                class="navds-body-short navds-body-short--medium"
              >
                Annet
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        id="333"
        aria-relevant="additions removals"
        aria-live="polite"
        class="navds-fieldset__error"
      >
      </div>
    </fieldset>
    <div class="stegKnapper">
      <button class="stegKnapper__bekreft navds-button navds-button--primary navds-button--small">
        <span class="navds-label navds-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button class="stegKnapper__tilbake navds-button navds-button--tertiary navds-button--small">
        <span class="navds-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="navds-label navds-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </div>
</div>

`;

exports[`VurderingArtikkel13_2b > snapshot test dersom Norge ikke er valgt 1`] = `

<div>
  <div class="vurderingArtikkel13_2b">
    <h1 class="typo-innholdstittel stegvelgertittel">
      Vurdering av artikkel 13 nr. 2 bokstav b
    </h1>
    <fieldset class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium">
      <legend class="navds-fieldset__legend navds-label">
        I hvilket land har virksomheten sitt interessesenter?
      </legend>
      <div class="navds-radio-buttons">
        <div class="navds-radio navds-radio--medium">
          <input
            id="333"
            name="333"
            type="radio"
            aria-labelledby="333"
            class="navds-radio__input"
            value="NORGE"
          >
          <label
            for="333"
            class="navds-radio__label"
          >
            <span class="navds-radio__content">
              <span
                id="333"
                aria-hidden="true"
                class="navds-body-short navds-body-short--medium"
              >
                Norge
              </span>
            </span>
          </label>
        </div>
        <div class="navds-radio navds-radio--medium">
          <input
            id="333"
            name="333"
            type="radio"
            aria-labelledby="333"
            class="navds-radio__input"
            value="ANNET"
          >
          <label
            for="333"
            class="navds-radio__label"
          >
            <span class="navds-radio__content">
              <span
                id="333"
                aria-hidden="true"
                class="navds-body-short navds-body-short--medium"
              >
                Annet
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        id="333"
        aria-relevant="additions removals"
        aria-live="polite"
        class="navds-fieldset__error"
      >
      </div>
    </fieldset>
    <div class="row">
      <div class="col col-xs-8 col-md-6 col-lg-4">
        <div>
          <div class="melosys-textfield landliste__linje__input  navds-form-field navds-form-field--small">
            <label
              for="333"
              class="navds-form-field__label navds-label navds-label--small"
            >
              Velg land:
            </label>
            <input
              list="333"
              bredde="fullbredde"
              id="333"
              type="text"
              class="navds-text-field__input navds-body-short navds-body-short--small"
              value="Kypros (CY)"
            >
            <div
              class="navds-form-field__error"
              id="333"
              aria-relevant="additions removals"
              aria-live="polite"
            >
            </div>
          </div>
          <div class="landliste__dataliste">
            <datalist id="333">
              <option
                value="Belgia (BE)"
                label="Belgia (BE)"
              >
              </option>
              <option
                value="Bulgaria (BG)"
                label="Bulgaria (BG)"
              >
              </option>
              <option
                value="Danmark (DK)"
                label="Danmark (DK)"
              >
              </option>
              <option
                value="Estland (EE)"
                label="Estland (EE)"
              >
              </option>
              <option
                value="Finland (FI)"
                label="Finland (FI)"
              >
              </option>
              <option
                value="Frankrike (FR)"
                label="Frankrike (FR)"
              >
              </option>
              <option
                value="Færøyene (FO)"
                label="Færøyene (FO)"
              >
              </option>
              <option
                value="Grønland (GL)"
                label="Grønland (GL)"
              >
              </option>
              <option
                value="Hellas (GR)"
                label="Hellas (GR)"
              >
              </option>
              <option
                value="Irland (IE)"
                label="Irland (IE)"
              >
              </option>
              <option
                value="Island (IS)"
                label="Island (IS)"
              >
              </option>
              <option
                value="Italia (IT)"
                label="Italia (IT)"
              >
              </option>
              <option
                value="Kroatia (HR)"
                label="Kroatia (HR)"
              >
              </option>
              <option
                value="Kypros (CY)"
                label="Kypros (CY)"
              >
              </option>
              <option
                value="Latvia (LV)"
                label="Latvia (LV)"
              >
              </option>
              <option
                value="Liechtenstein (LI)"
                label="Liechtenstein (LI)"
              >
              </option>
              <option
                value="Litauen (LT)"
                label="Litauen (LT)"
              >
              </option>
              <option
                value="Luxembourg (LU)"
                label="Luxembourg (LU)"
              >
              </option>
              <option
                value="Malta (MT)"
                label="Malta (MT)"
              >
              </option>
              <option
                value="Nederland (NL)"
                label="Nederland (NL)"
              >
              </option>
              <option
                value="Norge (NO)"
                label="Norge (NO)"
              >
              </option>
              <option
                value="Polen (PL)"
                label="Polen (PL)"
              >
              </option>
              <option
                value="Portugal (PT)"
                label="Portugal (PT)"
              >
              </option>
              <option
                value="Romania (RO)"
                label="Romania (RO)"
              >
              </option>
              <option
                value="Slovakia (SK)"
                label="Slovakia (SK)"
              >
              </option>
              <option
                value="Slovenia (SI)"
                label="Slovenia (SI)"
              >
              </option>
              <option
                value="Spania (ES)"
                label="Spania (ES)"
              >
              </option>
              <option
                value="Storbritannia (GB)"
                label="Storbritannia (GB)"
              >
              </option>
              <option
                value="Svalbard og Jan Mayen (SJ)"
                label="Svalbard og Jan Mayen (SJ)"
              >
              </option>
              <option
                value="Sveits (CH)"
                label="Sveits (CH)"
              >
              </option>
              <option
                value="Sverige (SE)"
                label="Sverige (SE)"
              >
              </option>
              <option
                value="Tsjekkia (CZ)"
                label="Tsjekkia (CZ)"
              >
              </option>
              <option
                value="Tyskland (DE)"
                label="Tyskland (DE)"
              >
              </option>
              <option
                value="Ungarn (HU)"
                label="Ungarn (HU)"
              >
              </option>
              <option
                value="Østerrike (AT)"
                label="Østerrike (AT)"
              >
              </option>
              <option
                value="Åland (AX)"
                label="Åland (AX)"
              >
              </option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
    <div class="stegKnapper">
      <button class="stegKnapper__bekreft navds-button navds-button--primary navds-button--small">
        <span class="navds-label navds-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button class="stegKnapper__tilbake navds-button navds-button--tertiary navds-button--small">
        <span class="navds-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="navds-label navds-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </div>
</div>

`;
